Initialize the main WorkspaceModule during the configuration time
(cherry picked from commit 13d47ac7c50a0a769793b06401f28e705904ab09)